初始化chatGPT页面

--- a/hqy4cloud-blog/package.json
+++ b/hqy4cloud-blog/package.json
@@ -12,6 +12,7 @@
     "ali-oss": "^6.10.0",
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.1",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
     "element-ui": "^2.13.2",
@@ -37,9 +38,12 @@
     "postcss-px2rem": "^0.3.0",
     "sequelize": "^6.3.3",
     "showdown-toc": "^1.0.1",
+    "socket.io-client": "^4.7.1",
     "svg-captcha": "^1.4.0",
+    "markdown-it": "^13.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.4.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "wowjs": "^1.1.3"
