--- a/hqy4cloud-blog/package.json
+++ b/hqy4cloud-blog/package.json
@@ -39,6 +39,7 @@
     "sequelize": "^6.3.3",
     "showdown-toc": "^1.0.1",
     "socket.io-client": "^4.7.1",
+    "compressorjs": "^1.2.1",
     "svg-captcha": "^1.4.0",
     "markdown-it": "^13.0.1",
     "vue": "^2.6.11",
