--- a/hqy4cloud-blog/package.json
+++ b/hqy4cloud-blog/package.json
@@ -13,9 +13,12 @@
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.1",
     "clipboard": "^2.0.11",
-    "core-js": "^3.6.5",
+    "element-ui": "^2.15.13",
+    "lemon-imui": "^1.7.7",
+    "v-clipboard": "^2.2.3",
     "css-loader": "^3.6.0",
     "element-ui": "^2.13.2",
+    "lockr": "^0.8.5",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.1.2",
     "js-base64": "^3.7.2",
