--- a/hqy4cloud-blog/package.json
+++ b/hqy4cloud-blog/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
@@ -13,11 +14,10 @@
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.1",
     "clipboard": "^2.0.11",
-    "element-ui": "^2.15.13",
+    "element-ui": "^2.13.2",
     "lemon-imui": "^1.7.7",
     "v-clipboard": "^2.2.3",
     "css-loader": "^3.6.0",
-    "element-ui": "^2.13.2",
     "lockr": "^0.8.5",
     "js-web-screen-shot": "^1.9.8-rc.3",
     "github-markdown-css": "^4.0.0",
@@ -70,6 +70,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.14.1",
+    "patch-package": "^8.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.3",
