--- a/hqy4cloud-blog/package.json
+++ b/hqy4cloud-blog/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "ali-oss": "^6.10.0",
+    "core-js": "^3.6.5",
     "autoprefixer": "^9.8.4",
     "axios": "^0.21.1",
     "clipboard": "^2.0.11",
